--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "inventorymanagement",
+  "name": "hs-inventory-frontend",
   "version": "0.0.1",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
-  "description": "Hackerschool project for inventory management",
+  "description": "HackerSchool project for inventory management",
+  "private": true,
   "engines": {
     "npm": "^6.9.0",
-    "node": "^10.16.0"
+    "node": "^14.15.0"
   },
   "dependencies": {
     "@vue/cli-service": "^4.5.6",
@@ -33,8 +34,7 @@
     "type": "git",
     "url": "git+https://github.com/HackerSchool/InventoryManagement.git"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "HackerSchool",
   "bugs": {
     "url": "https://github.com/HackerSchool/InventoryManagement/issues"
   },
