--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "hs-inventory",
   "version": "0.0.1",
-  "description": "Inventory Management for HackerSchool",
+  "description": "HackerSchool project for inventory management",
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
