Fix prettier not working correctly on Vue files (#6)
Closes #6

Signed-off-by: Diogo Correia <me@diogotc.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,12 @@
     },
     {
       "files": ["frontend/**"],
-      "extends": ["eslint:recommended", "prettier", "plugin:vue/vue3-recommended"]
+      "extends": [
+        "plugin:vue/recommended",
+        "eslint:recommended",
+        "prettier/vue",
+        "plugin:prettier/recommended"
+      ]
     }
   ]
 }
