--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier \"**/*.{js,vue}\" --write",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "postinstall": "run-p setup:*",
+    "setup:backend": "cd backend && npm install",
+    "setup:frontend": "cd frontend && npm install"
   },
   "repository": {
     "type": "git",
@@ -29,6 +32,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-vue": "^7.1.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.1.2"
   }
 }
