Add JWT and Knex middleware to Express (#7)
Signed-off-by: Diogo Correia <me@diogotc.com>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,12 @@
+# Database information
 DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=
 DB_NAME=hs_inventory
+
+# JWT Authentication - Only needed in production
+JWT_SECRET=
 
 # Backend server port
 PORT=5000
