--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
     "mysql2": "^2.2.5"
   }
