--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@vue/cli-service": "^4.5.6",
     "axios": "^0.20.0",
-    "npm": "^6.14.8",
     "sass-loader": "^7.1.0",
     "vue": "^2.6.12",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.4.3",
     "vuetify": "^2.3.10",
     "vuex": "^3.5.1"
