Add fenix login endpoint (closes #10)
Signed-off-by: Diogo Correia <me@diogotc.com>

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -10,3 +10,9 @@ JWT_SECRET=
 
 # Backend server port
 PORT=5000
+
+# Fenix API
+FENIX_BASE_URL=https://fenix.tecnico.ulisboa.pt/
+FENIX_CLIENT_ID=
+FENIX_CLIENT_SECRET=
+FENIX_REDIRECT_URL=
