Add role to members table in database (closes #17)
Signed-off-by: Diogo Correia <me@diogotc.com>

--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "migrate": "knex migrate:latest"
+    "migrate": "knex migrate:latest",
+    "migrate:rollback": "knex migrate:rollback"
   },
   "description": "HackerSchool project for inventory management",
   "private": true,
