Add GET `/locations` find all endpoint (closes #32)
Signed-off-by: Diogo Correia <me@diogotc.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,6 +13,9 @@
       "extends": ["eslint:recommended", "prettier", "plugin:node/recommended"],
       "env": {
         "es6": true
+      },
+      "parserOptions": {
+        "ecmaVersion": 2020
       }
     },
     {
