--- a/backend/package.json
+++ b/backend/package.json
@@ -28,8 +28,10 @@
   },
   "dependencies": {
     "axios": "^0.21.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
     "mysql2": "^2.2.5"
