--- a/backend/package.json
+++ b/backend/package.json
@@ -31,9 +31,12 @@
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.12",
-    "mysql2": "^2.2.5"
+    "mysql2": "^2.2.5",
+    "sharp": "^0.27.0",
+    "uuid": "^8.3.2"
   }
 }
