--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "node": "^14.15.0"
   },
   "dependencies": {
+    "@vue/cli-plugin-pwa": "^4.5.10",
     "@vue/cli-service": "^4.5.10",
     "axios": "^0.21.1",
     "sass-loader": "^10.1.0",
