--- a/backend/package.json
+++ b/backend/package.json
@@ -36,7 +36,6 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.15",
     "mysql2": "^2.2.5",
-    "sharp": "^0.27.0",
-    "uuid": "^8.3.2"
+    "sharp": "^0.27.0"
   }
 }
